# client-server-messenger

./: README.md
client/: CMakeLists.txt  Chat.cpp  Chat.h  ConsoleManager.cpp  ConsoleManager.h  Message.cpp  Message.h  Singleton.h  User.cpp  User.h  client.cpp
server/: CMakeLists.txt  Connection.cpp  Connection.h  DataBase.cpp  DataBase.h  Message.cpp  Message.h  Server.cpp  Server.h  Singleton.h  User.cpp  User.h  client.cpp  client.h  main.cpp
